--- a/Academics.html
+++ b/Academics.html
@@ -18,6 +18,6 @@
             <li><a href="Contact.html">Contact us</a></li>
         </ul>
     </nav>
-    <h2>This is the home page </h2>
+    <h2>This is the Academics page </h2>
 </body>
 </html>
