--- a/News.html
+++ b/News.html
@@ -12,7 +12,7 @@
         <ul>
             <li><a href="index.html">Home page</a></li>
             <li><a href="About.html">About</a></li>
-            <li><a href="Academics.html">Academics</a></li>
+            <li><a href="Academic.html">Academics</a></li>
             <li><a href="News.html">News & Events</a></li>
             <li><a href="Gallery.html">News & Events</a></li>
             <li><a href="Contact.html">Contact us</a></li>
