--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>GAYAZA HIGH SCHOOL</h1>
+    <div>
+        <h1>GAYAZA HIGH SCHOOL</h1>
     <nav class="navbar">
-        <ul>
+        <section><img src="Images\Gayaza logo.png" alt="School logo"></section>
+        <section><ul>
             <li><a href="index.html">Home page</a></li>
             <li><a href="About.html">About</a></li>
             <li><a href="Academics.html">Academics</a></li>
@@ -17,7 +19,9 @@
             <li><a href="Gallery.html">News & Events</a></li>
             <li><a href="Contact.html">Contact us</a></li>
         </ul>
+    </section>
     </nav>
+    </div>
     <h2>This is the home page </h2>
 </body>
 </html>
