--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
      <p>Welcome to your journey of greatness!</p>
     </div>
 
+    <!-- Image Carousel -->
+<div class="carousel-container">
+    <div class="carousel-slide"><img src="Images\picture1.jpg" alt="Slide 1"></div>
+    <div class="carousel-slide"><img src="Images\picture2.jpg" alt="Slide 2"></div>
+    <div class="carousel-slide"><img src="Images\picture3.jpg" alt="Slide 3"></div>
+    <div class="carousel-slide"><img src="Images\picture4.jpg" alt="Slide 4"></div>
+    
+    <!-- Navigation buttons -->
+    <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
+    <button class="next" onclick="changeSlide(1)">&#10095;</button>
+</div>
+
+
     <h2>HEADTEACHER'S GREETINGS</h2>
     <img src="Images\gayaza high school headmistress.jpg" alt="Headteacher">
     <p>Ladies and gentlemen, esteemed guests, parents, students, and well-wishers,</p>
