--- a/About.html
+++ b/About.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gayaza High School</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/449a7ce769.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>GAYAZA HIGH SCHOOL</h1>
@@ -14,10 +23,44 @@
             <li><a href="About.html">About</a></li>
             <li><a href="Academics.html">Academics</a></li>
             <li><a href="News.html">News & Events</a></li>
-            <li><a href="Gallery.html">News & Events</a></li>
+            <li><a href="Gallery.html">Gallery</a></li>
             <li><a href="Contact.html">Contact us</a></li>
         </ul>
     </nav>
     <h2>This is the home page </h2>
+    <!--Footer-->
+    <footer class="footer">
+        <div class="sectionleft">
+            <img src="Images\Gayaza logo.png" alt="School logo" id="footer_logo">
+            <h4 class="montserrat">GAYAZA HIGH SCHOOL</h4>
+            <h6>NEVER GIVE UP</h6>
+  
+            <h4 class="montserrat">About Us</h4>
+            <p class="open-sans">Gayaza High School offers the National Curriculum <br>and is a centre for Uganda National Examination Board.</p>
+           <a href="https://facebook.com" class="icons">
+                <i class="fa-brands fa-facebook fa-2x"></i>
+             </a>
+            <a href="https://twitter.com" class="icons">
+             <i class="fa-brands fa-square-x-twitter fa-2x"></i>
+            </a>
+            <a href="https://linkedin.com" class="icons">
+             <i class="fa-brands fa-linkedin fa-2x" ></i>
+            </a> 
+        </div>
+        <div class="sectionright">
+        <div>
+            <h4 class="montserrat">Get In Touch</h4>
+            <p class="montserrat">P.O.Box 729</p>
+            <p class="montserrat">Gayaza,Wakiso.</p>
+            <p class="montserrat">Phone: +25677213621</p>
+            <p class="montserrat">Email:</p> <a href="malito:admin@gayazahs.sc.ug">admin@gayazahs.sc.ug</a>
+           
+        </div>
+  
+        <h4>Opening Hours</h4>
+        <p>Open Monday to Friday: 9am-5pm</p>
+        </div>
+  
+    </footer>
 </body>
 </html>
