--- a/A_level.html
+++ b/A_level.html
@@ -21,13 +21,13 @@
         <ul>
             <li><a href="index.html">Home page</a></li>
             <li><a href="About.html">About</a></li>
-            <li><a href="Academic.html">Academics</a></li>
+            <li><a href="Academics.html">Academics</a></li>
             <li><a href="News.html">News & Events</a></li>
-            <li><a href="Gallery.html">News & Events</a></li>
+            <li><a href="Gallery.html">Gallery</a></li>
             <li><a href="Contact.html">Contact us</a></li>
         </ul>
     </nav>
-    <h2>This is the home page </h2>
+   
     <!--Footer-->
     <footer class="footer">
         <div class="sectionleft">
