--- a/Contact.html
+++ b/Contact.html
@@ -16,18 +16,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>GAYAZA HIGH SCHOOL</h1>
-    <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Home page</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="Academics.html">Academics</a></li>
-            <li><a href="News.html">News & Events</a></li>
-            <li><a href="Gallery.html">News & Events</a></li>
-            <li><a href="Contact.html">Contact us</a></li>
-        </ul>
-    </nav>
-    <h2>This is the home page </h2>
+    <!--Header-->
+    <header>
+        <div class="info">
+            <img src="Images\Gayaza logo.png" alt="School logo" class="logo"> 
+            <div class="text">
+            <h3 class="name">GAYAZA HIGH SCHOOL</h3> 
+            <p class="motto montserrat">Never Give Up</p>  
+             </div>
+             </div>
+    
+        <nav class="navbar">
+            <ul class="w-montserrat">
+                <li><a href="index.html">Home page</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="Academics.html">Academics</a></li>
+                <li><a href="News.html">News & Events</a></li>
+                <li><a href="Gallery.html">Gallery</a></li>
+                <li><a href="Contact.html">Contact us</a></li>
+            </ul>
+          </nav>
+        </header>
     <!--Footer-->
     <footer class="footer">
         <div class="sectionleft">
