--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li><a href="About.html">About</a></li>
             <li><a href="Academics.html">Academics</a></li>
             <li><a href="News.html">News & Events</a></li>
-            <li><a href="Gallery.html">News & Events</a></li>
+            <li><a href="Gallery.html">Gallery</a></li>
             <li><a href="Contact.html">Contact us</a></li>
         </ul>
       </nav>
@@ -57,6 +57,7 @@
           <div class="carousel-item">
             <img src="Images\Corby.png" class="d-block w-100" alt="Re-opening of Corby House">
           </div>
+
            <!--Welcome Message-->
           <div class="transbox">
             <h2 class="montserrat">WELCOME TO GAYAZA HIGH SCHOOL</h2>
@@ -70,14 +71,21 @@
       <!--Headteacher's Message-->
     <section id="greeting" >
     <h2 class="montserrat">HEADTEACHER'S GREETINGS</h2>
-    <div class="card"><div class="headteacher_image"><img src="Images\gayaza high school headmistress.jpg" alt="Headteacher" id="headteacher"></div>
-    <div class="content open-sans"><p>Ladies and gentlemen, esteemed guests, parents, students, and well-wishers,
-        It is with great joy and pride that I welcome you to Gayaza High School, a place of excellence, tradition, and transformation. Since our founding in 1905, we have remained committed to shaping young women into confident, God-fearing, and purpose-driven leaders who excel in academics, character, and service to their communities.
-         At Gayaza, we believe in nurturing not just the mind but also the heart and spirit. Our holistic approach to education ensures that every girl who walks through our gates receives the skills, knowledge, and values necessary to thrive in an ever-changing world. Through a rich curriculum, dynamic co-curricular activities, and a strong moral foundation, we empower our students to be innovative, resilient, and compassionate individuals.
-        To our parents and guardians, thank you for entrusting us with the education of your daughters. To our alumnae, your continued support and achievements inspire us to uphold the legacy of excellence. To our students, you are the heart of this institution—may you continue to dream big, work hard, and let your light shine.
-        We warmly invite you to partner with us in this journey of empowerment, as we continue to shape the future, one girl at a time.
-        Welcome to Gayaza High School—where integrity, discipline, and excellence define who we are.
-        Thank you, and may God bless you all.</p>
+    <div class="card"><div class="headteacher_image">
+    <div class="content open-sans">
+      <img src="Images\gayaza high school headmistress.jpg" alt="Headteacher" id="headteacher"></div>
+      <p>Ladies and gentlemen, esteemed guests, parents, students, and well-wishers,</p>
+      <p>It is with great joy and pride that I welcome you to Gayaza High School, a place of excellence, tradition, and transformation. Since our founding in 1905, we have remained committed to shaping young women into confident, God-fearing, and purpose-driven leaders who excel in academics, character, and service to their communities.</p>
+ 
+      <p> At Gayaza, we believe in nurturing not just the mind but also the heart and spirit. Our holistic approach to education ensures that every girl who walks through our gates receives the skills, knowledge, and values necessary to thrive in an ever-changing world. Through a rich curriculum, dynamic co-curricular activities, and a strong moral foundation, we empower our students to be innovative, resilient, and compassionate individuals.</p>
+
+       To our parents and guardians, thank you for entrusting us with the education of your daughters. To our alumnae, your continued support and achievements inspire us to uphold the legacy of excellence. To our students, you are the heart of this institution—may you continue to dream big, work hard, and let your light shine.
+
+       We warmly invite you to partner with us in this journey of empowerment, as we continue to shape the future, one girl at a time.
+
+       <p>Welcome to Gayaza High School—where integrity, discipline, and excellence define who we are.</p>
+
+       <p>Thank you, and may God bless you all.</p>
        <b><p>MRS. ROBINAH KIZITO</p></b>
        </div>
     </div>
