--- a/About.html
+++ b/About.html
@@ -50,11 +50,11 @@
      Gayaza high school was founded by the Christian missionaries who belonged
      to the Church missionary society in 1905 on a land donated to the 
      Church by Kabaka Daudi Chwa II. <br> The school started with a population of 4
-     sudents being the firs Uganda's girl's boarding school.  <br>
+     sudents being the first Uganda's girl's boarding school.  <br>
      The school was established on a 140-acres of land and its motto was <b>"banno"</b> meaning
-     "your friends". <br> It was in 1939, that the informal senior secndary school began and 
-     later in 1962, the school was officially sepaareted ie,into the junior and the senior schools
-    . FRom 4 girls, the twin Schools have gone on to become one of the Uganda's giant schools with an
+     "your friends". <br> It was in 1939, that the informal senior secondary school began and 
+     later in 1962, the school was officially separated i.e,into the junior and the senior schools
+    . From 4 girls, the twin Schools have gone on to become one of the Uganda's giant schools with an
      enrollment of more than 1000 pupils and students respectively.</p> 
     
     
@@ -78,14 +78,14 @@
            <li>Music dance and dramma.</li>
            <li>Practical skills.</li>
        </ul>
-       Among other BEneficial activities.
+       Among other Beneficial activities.
      </p>
        </div>
        <div class="management">
        <h3>Our management</h3>
        <span>
         Gayaza high school is headed by a head teacher (Currently Mrs Kizito Robinah Katongole)
-         wo is supported by two deputies and a director of studies. <br>
+         who is supported by two deputies and a director of studies. <br>
       We have three deans ie Dean for lower secondary(S1-S2), Dean for middle secondary(S3-S4),
       and Dean for upper School(S5-S6). <br>
       A senior man and a senior woman also support the school affairs regarding the student affairs. 
