Tried th make changes to the dropdown, will continue trying

--- a/A_level.html
+++ b/A_level.html
@@ -14,19 +14,106 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-</head>
-<body>
-    <h1>GAYAZA HIGH SCHOOL</h1>
-    <nav class="navbar">
-        <ul>
-            <li><a href="index.html">Home page</a></li>
-            <li><a href="About.html">About</a></li>
-            <li><a href="Academics.html">Academics</a></li>
-            <li><a href="News.html">News & Events</a></li>
-            <li><a href="Gallery.html">Gallery</a></li>
-            <li><a href="Contact.html">Contact us</a></li>
-        </ul>
-    </nav>
+   
+    <header>
+        <div class="info">
+            <img src="Images\Gayaza logo.png" alt="School logo" class="logo"> 
+            <div class="text">
+            <h3 class="name">GAYAZA HIGH SCHOOL</h3> 
+            <p class="motto montserrat">Never Give Up</p>  
+             </div>
+             </div>
+    
+        <nav class="navbar">
+            <ul class="w-montserrat">
+                <li><a href="index.html">Home page</a></li>
+                <li><a href="About.html">About</a></li>
+                <li><a href="Academics.html">Academics</a></li>
+                <li><a href="News.html">News & Events</a></li>
+                <li><a href="Gallery.html">Gallery</a></li>
+                <li><a href="Contact.html">Contact us</a></li>
+            </ul>
+          </nav>
+        </header>
+    
+    <h2 class="montserrat">Advanced level</h2>
+      <p> As one of the top schools for Government admissions each year, we offer a diverse range of A-Level subjects under the current Ugandan curriculum, 
+        preparing students for any Arts or Science combination. Our well-structured program ensures that students qualify for professional courses at universities 
+        and institutions of higher learning.</p>
+   
+       <p>We continuously review our subject offerings to match the evolving needs and abilities of our students, incorporating hands-on training to equip them 
+         both academic and practical skills. This commitment to excellence is overseen by our headmistress, who ensures that the school maintains high educational standards.</p>
+   
+       <p>Subjects Offered in the Updated O-Level Curriculum</p>
+       <p>The revised curriculum includes a mix of compulsory and elective subjects:</p>
+   
+       <b><p>Compulsory Subjects:</p></b>
+   
+       <!--Accordion-->
+       <button class="accordion">English</button>
+   <div class="panel">
+       <p> Focuses on developing proficiency in reading, writing, listening, and speaking. Emphasizes grammar, vocabulary, comprehension, composition,
+            and critical analysis of texts.</p>
+   
+            <p><b>UCE Examination Papers</b>: Paper 1 (Composition and Comprehension), Paper 2 (Language Use and Summary).</p>
+   </div>
+   
+       <button class="accordion">Mathematics</button>
+   <div class="panel">
+       <p>  Covers topics such as algebra, geometry, trigonometry, statistics, and calculus. 
+           Aims to develop logical reasoning, problem-solving skills, and numerical literacy.</p>
+   
+            <p><b>UCE Examination Papers</b>: Paper 1 (Pure Mathematics), Paper 2 (Applied Mathematics).</p>
+   </div>
+   
+       <button class="accordion">Biology</button>
+   <div class="panel">
+       <p> Explores the study of living organisms, including cell biology, genetics, ecology, human anatomy, and physiology.
+           Encourages practical investigations and understanding of biological processes.</p>
+   
+            <p><b>UCE Examination Papers</b>: Paper 1 (Theory), Paper 2 (Practical)</p>
+   </div>
+   
+       <button class="accordion">Chemistry</button>
+   <div class="panel">
+       <p> Focuses on the composition, structure, properties, and changes of matter. Topics include atomic structure, chemical reactions, periodic table, and industrial processes. 
+           Practical laboratory work is integral.</p>
+   
+            <p><b>UCE Examination Papers</b>: Paper 1 (Theory), Paper 2 (Practical).</p>
+   </div>
+   
+       <button class="accordion">Physics</button>
+   <div class="panel">
+       <p> Studies the fundamental principles governing energy and matter. Covers mechanics, electricity, magnetism, waves, and modern physics concepts. 
+           Emphasizes analytical skills and experimental techniques.</p>
+   
+            <p><b>UCE Examination Papers</b>: Paper 1 (Theory), Paper 2 (Practical).</p>
+   </div>
+   
+   <button class="accordion">Geography</button>
+   <div class="panel">
+       <p> Examines physical and human environments. Topics include landforms, climate, population dynamics, and economic activities. 
+           Encourages spatial awareness and environmental stewardship..</p>
+   
+            <p><b>UCE Examination Papers</b>: Paper 1 (Physical Geography), Paper 2 (Human and Economic Geography), Paper 3 (Fieldwork).</p>
+   </div>
+   
+   <button class="accordion">History and Political Education</button>
+   <div class="panel">
+       <p> Explores historical events, movements, and figures, both locally and globally. 
+           Emphasizes understanding political systems, governance, and civic responsibilities.</p>
+   
+            <p><b>UCE Examination Papers</b>:  Paper 1 (East African History), Paper 2 (World History), Paper 3 (Political Education).</p>
+   </div>
+   
+   
+   <button class="accordion">Religious Education</button>
+   <div class="panel">
+       <p> Offers insights into religious beliefs, practices, and ethics. Students can choose between Christian Religious Education (CRE) and 
+           Islamic Religious Education (IRE), fostering moral development and interfaith understanding.</p>
+   
+            <p><b>UCE Examination Papers</b>: Paper 1 and Paper 2, varying based on the chosen religious focus.</p>
+   </div>
    
     <!--Footer-->
     <footer class="footer">
