Added the drop down button, HTML and CSS code for the accordion.

--- a/Gallery.html
+++ b/Gallery.html
@@ -15,22 +15,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <!--Header-->
-    <header>
+     <header>
         <div class="info">
             <img src="Images\Gayaza logo.png" alt="School logo" class="logo"> 
             <div class="text">
-            <h3 class="name">GAYAZA HIGH SCHOOL</h3> 
+            <h4 class="name school-heading">GAYAZA HIGH SCHOOL</h4> 
             <p class="motto montserrat">Never Give Up</p>  
              </div>
              </div>
     
         <nav class="navbar">
             <ul class="w-montserrat">
-                <li><a href="index.html">Home page</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="About.html">About</a></li>
-                <li><a href="Academics.html">Academics</a></li>
+                <li><a href="Academics.html">Academics</a>
+                  <ul class="dropdown">                
+                    <li><a href="O_level.html"> O level</a></li>
+                    <li><a href=A_level.html>A level </a></li>
+                  </ul>
+                
+                </li>
                 <li><a href="News.html">News & Events</a></li>
                 <li><a href="Gallery.html">Gallery</a></li>
                 <li><a href="Contact.html">Contact us</a></li>
