--- a/index.html
+++ b/index.html
@@ -22,16 +22,22 @@
     <div class="info">
         <img src="Images\Gayaza logo.png" alt="School logo" class="logo"> 
         <div class="text">
-        <h3 class="name">GAYAZA HIGH SCHOOL</h3> 
+        <h4 class="name school-heading">GAYAZA HIGH SCHOOL</h4> 
         <p class="motto montserrat">Never Give Up</p>  
          </div>
          </div>
 
     <nav class="navbar">
         <ul class="w-montserrat">
-            <li><a href="index.html">Home page</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="About.html">About</a></li>
-            <li><a href="Academics.html">Academics</a></li>
+            <li><a href="Academics.html">Academics</a>
+              <ul class="dropdown">                
+                <li><a href="O_level.html"> O level</a></li>
+                <li><a href=A_level.html>A level </a></li>
+              </ul>
+            
+            </li>
             <li><a href="News.html">News & Events</a></li>
             <li><a href="Gallery.html">Gallery</a></li>
             <li><a href="Contact.html">Contact us</a></li>
@@ -43,7 +49,7 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="Images\SOF.png" class="d-block w-100" alt="Science Olympiad representatives">
+            <img src="Images\sof3.jpg" class="d-block w-100" alt="Science Olympiad representatives">
           </div>
           <div class="carousel-item">
             <img src="Images\GAPA.png" class="d-block w-100" alt="Gayaza Performing Arts">
@@ -52,7 +58,7 @@
             <img src="Images\DH.png" class="d-block w-100" alt="Dining Hall">
           </div>
           <div class="carousel-item">
-            <img src="Images\SOF2.png" class="d-block w-100" alt="Science Olympiad representatives">
+            <img src="Images\SOF2.jpg" class="d-block w-100" alt="Science Olympiad representatives">
           </div>
           <div class="carousel-item">
             <img src="Images\Corby.png" class="d-block w-100" alt="Re-opening of Corby House">
