--- a/News.html
+++ b/News.html
@@ -44,9 +44,9 @@
             <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident laudantium molestias blanditiis distinctio perspiciatis non placeat aut temporibus! Accusamus ad exercitationem laudantium consequuntur temporibus esse quisquam amet voluptates ut itaque!</P>
         </div>
     </div>
-    <div class="form">
+    <div class="box-content">
         <div>
-            <form action="news.php" method="POST" class="form-content">
+            <form action="news.php" method="POST" >
                 <fieldset>
                 <label for="Firstname">Firstname:</label>
                 <input type="text" id="Firstname"  required><br><br>
@@ -80,7 +80,7 @@
                   <option value="S6">S6</option> 
                  </select><br>
 
-                 <label for="News or event">News or event</label>
+                 <label for="News or event">News or event</label><br>
                  <textarea id="News or event" rows="3" cols="" placeholder="Type here your news or event"></textarea><br>
                  <button>Submit</button>
                  </fieldset>
