--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="card"><div class="headteacher_image">
     <div class="content open-sans">
       <img src="Images\gayaza high school headmistress.jpg" alt="Headteacher" id="headteacher"></div>
-      <p>Ladies and gentlemen, esteemed guests, parents, students, and well-wishers,</p>
+      <div id="anima"><p>Ladies and gentlemen, esteemed guests, parents, students, and well-wishers,</p>
       <p>It is with great joy and pride that I welcome you to Gayaza High School, a place of excellence, tradition, and transformation. Since our founding in 1905, we have remained committed to shaping young women into confident, God-fearing, and purpose-driven leaders who excel in academics, character, and service to their communities.</p>
  
       <p> At Gayaza, we believe in nurturing not just the mind but also the heart and spirit. Our holistic approach to education ensures that every girl who walks through our gates receives the skills, knowledge, and values necessary to thrive in an ever-changing world. Through a rich curriculum, dynamic co-curricular activities, and a strong moral foundation, we empower our students to be innovative, resilient, and compassionate individuals.</p>
@@ -92,27 +92,53 @@
        <p>Welcome to Gayaza High School—where integrity, discipline, and excellence define who we are.</p>
 
        <p>Thank you, and may God bless you all.</p>
-       <b><p>MRS. ROBINAH KIZITO</p></b>
+       <b><p>MRS. ROBINAH KIZITO</p></b></div>
        </div>
     </div>
     </section>
 
     <!--Testimonial Carousel-->
-    <h2 class="montserrat">TESTIMONIALS</h2>
-    <p>Gayaza High School shaped me into the woman I am today. Beyond academic excellence, it instilled in me discipline, leadership, and resilience.</p>
-    <p>The mentorship from teachers and the sisterhood among students created an environment that nurtured my confidence and ambition. I will always be proud to be a Gayaza girl!"</p>
-    <p> Dr. Grace N., Medical Doctor- Alumni</p>
-    <p>Sending my daughter to Gayaza High School was the best decision I made. She has grown into a confident, responsible, and well-rounded individual. The school provides a safe and nurturing environment where girls can thrive both academically and socially.</p> 
-    <p>I am grateful for the dedicated teachers and strong Christian values that define the school.</p>
-    <p> Mrs. Agnes Baine, Mother of a Student</p>
-    <p>Gayaza High School gave me the foundation to become a leader. From debating competitions to prefectship roles, I learned the value of service, confidence, and discipline. The friendships I made here have lasted a lifetime, and I am proud to be part of this great legacy.</p>
-    <p>Gayaza girls are raised to lead, and I am a testament to that!"</p>
-    <p>
-        Hon.Sarah K., Member of Parliament- Alumni
-    </p>
-    <p>Teaching at Gayaza High School has been an incredible experience. The students here are eager to learn, disciplined, and full of potential. What makes this school unique is its commitment to nurturing young women holistically, ensuring they excel not only academically but also in leadership and character.</p>
-    <p> It is a privilege to be part of this transformative journey</p>
-    <p> Mr. John M., Teacher</p>
+    <div class="slider">
+      <h2 class="montserrat">TESTIMONIALS</h2>
+      <figure>
+      <div class="sliden">
+          <div class="testimonial-content">
+            <p>Gayaza High School shaped me into the woman I am today. Beyond academic excellence, it instilled in me discipline, leadership, and resilience.</p>
+             <p>The mentorship from teachers and the sisterhood among students created an environment that nurtured my confidence and ambition. I will always be proud to be a Gayaza girl!"</p>
+           </div>
+           <div class="testimonial-author">     
+             <p> Dr. Grace N., Medical Doctor- Alumni</p>
+           </div>
+         </div>
+      <div class="sliden">
+          <div class="testimonial-content">
+            <p>Sending my daughter to Gayaza High School was the best decision I made. She has grown into a confident, responsible, and well-rounded individual. The school provides a safe and nurturing environment where girls can thrive both academically and socially.</p> 
+            <p>I am grateful for the dedicated teachers and strong Christian values that define the school.</p>
+          </div>
+          <div class="testimonial-author">
+            <p> Mrs. Agnes Baine, Mother of a Student</p>
+          </div>
+         </div>
+      <div class="sliden">
+          <div class="testimonial-content">
+              <p>Gayaza High School gave me the foundation to become a leader. From debating competitions to prefectship roles, I learned the value of service, confidence, and discipline. The friendships I made here have lasted a lifetime, and I am proud to be part of this great legacy.</p>
+              <p>Gayaza girls are raised to lead, and I am a testament to that!"</p>
+          </div>
+          <div class="testimonial-author">
+              <p>Hon.Sarah K., Member of Parliament- Alumni</p>
+          </div>
+      </div>
+      <div class="sliden">
+          <div class="testimonial-content">
+              <p>Teaching at Gayaza High School has been an incredible experience. The students here are eager to learn, disciplined, and full of potential. What makes this school unique is its commitment to nurturing young women holistically, ensuring they excel not only academically but also in leadership and character.</p>
+              <p> It is a privilege to be part of this transformative journey</p>
+          </div>
+          <div class="testimonial-author">
+              <p> Mr. John M., Teacher</p>
+          </div>
+         </div>
+      </figure>
+    </div>
     
 
     <!--Footer-->
