for the testimonials

--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
     </section>
 
     <!--Testimonial Carousel-->
-    <div class="slider">
+    <!--<div class="testimonials">-->
       <h2 class="montserrat">TESTIMONIALS</h2>
-      <figure>
+      <div class="slider">
+        <div class="slid">
       <div class="sliden">
           <div class="testimonial-content">
             <p>Gayaza High School shaped me into the woman I am today. Beyond academic excellence, it instilled in me discipline, leadership, and resilience.</p>
@@ -137,8 +138,11 @@
               <p> Mr. John M., Teacher</p>
           </div>
          </div>
-      </figure>
-    </div>
+         </div>
+         <button class="prev" onclick="prevSlide()">&#10094</button>
+         <button class="next" onclick="nextslide()">&#10095</button>
+        </div>
+    
     
 
     <!--Footer-->
@@ -175,7 +179,7 @@
       </div>
 
   </footer>
-
+<script src="scripts.js"></script>
 </body>
 
 </html>
