--- a/About.html
+++ b/About.html
@@ -70,7 +70,7 @@
     <h3> Us today</h3>  
     
     <p>
-        Gaya high school is still a Church of Uganda founded and a Gorvenment aided girls' boarding school
+        Gayaza high school is still a Church of Uganda founded and a Gorvenment aided girls' boarding school
         with both O and A level, offering both Arts and Sciences with a number of co-curricular activities 
        that include;
        <ul class="co-curricular">
@@ -117,12 +117,12 @@
                 <h3>our fees structure</h3>
                 <table border="1">
                     <tr><th>NO</th><th>CLASS</th><th>AMOUNT</th></tr>
-                    <tr><td>01</td><td>S.1</td>  <td>600,000=</td></tr>
-                    <tr><td>02</td> <td>S.2</td> <td>600,000=</td></tr>
-                    <tr><td>03</td> <td>S.3</td> <td>600,000=</td></tr>
-                    <tr><td>04</td><td>S.4</td> <td>600,000=</td></tr>
-                    <tr><td>05</td><td>S.5</td> <td>600,000=</td></tr>
-                    <tr><td>06</td><td>S.6</td> <td>600,000=</td></tr>
+                    <tr><td>1</td><td>S.1</td>  <td>600,000=</td></tr>
+                    <tr><td>2</td><td>S.2</td> <td>600,000=</td></tr>
+                    <tr><td>3</td><td>S.3</td> <td>600,000=</td></tr>
+                    <tr><td>4</td><td>S.4</td> <td>600,000=</td></tr>
+                    <tr><td>5</td><td>S.5</td> <td>600,000=</td></tr>
+                    <tr><td>6</td><td>S.6</td> <td>600,000=</td></tr>
                 </table>
             </span>
         <section class = "container">  
@@ -186,5 +186,6 @@
         </div>
   
     </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
