--- a/O_level.html
+++ b/O_level.html
@@ -63,9 +63,10 @@
        </div>
 
        <b><h4 class="montserrat heading">Compulsory Subjects:</h4></b>
+
        <!--Accordion-->
        <div class="section-panel">
-       <button class="accordion">English</button>
+       <button class="accordion">English<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Focuses on developing proficiency in reading, writing, listening, and speaking. Emphasizes grammar, vocabulary, comprehension, composition,
             and critical analysis of texts.</p>
@@ -78,7 +79,7 @@
             </p>
    </div>
    
-       <button class="accordion">Mathematics</button>
+       <button class="accordion">Mathematics<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Covers topics such as algebra, geometry, trigonometry, statistics, and calculus. 
            Aims to develop logical reasoning, problem-solving skills, and numerical literacy.</p>
@@ -91,7 +92,7 @@
             </p>
    </div>
    
-       <button class="accordion">Biology</button>
+       <button class="accordion">Biology<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Explores the study of living organisms, including cell biology, genetics, ecology, human anatomy, and physiology.
            Encourages practical investigations and understanding of biological processes.</p>
@@ -104,7 +105,7 @@
             </p>
    </div>
    
-       <button class="accordion">Chemistry</button>
+       <button class="accordion">Chemistry<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Focuses on the composition, structure, properties, and changes of matter. Topics include atomic structure, chemical reactions, periodic table, and industrial processes. 
            Practical laboratory work is integral.</p>
@@ -117,7 +118,7 @@
             </p>
    </div>
    
-       <button class="accordion">Physics (General Science for learners with special needs)</button>
+       <button class="accordion">Physics (General Science for learners with special needs)<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Studies the fundamental principles governing energy and matter. Covers mechanics, electricity, magnetism, waves, and modern physics concepts. 
            Emphasizes analytical skills and experimental techniques.</p>
@@ -130,7 +131,7 @@
             </p>
    </div>
    
-   <button class="accordion">Geography</button>
+   <button class="accordion">Geography<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Examines physical and human environments. Topics include landforms, climate, population dynamics, and economic activities. 
            Encourages spatial awareness and environmental stewardship..</p>
@@ -144,7 +145,7 @@
             </p>
    </div>
    
-   <button class="accordion">History and Political Education</button>
+   <button class="accordion">History and Political Education<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Explores historical events, movements, and figures, both locally and globally. 
            Emphasizes understanding political systems, governance, and civic responsibilities.</p>
@@ -160,7 +161,7 @@
    </div>
    
    
-   <button class="accordion">Religious Education</button>
+   <button class="accordion">Religious Education<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Offers insights into religious beliefs, practices, and ethics. Students can choose between Christian Religious Education (CRE) and 
            Islamic Religious Education (IRE), fostering moral development and interfaith understanding.</p>
@@ -169,7 +170,7 @@
    </div>
    
    
-   <button class="accordion">Kiswahili</button>
+   <button class="accordion">Kiswahili<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Develops proficiency in Kiswahili language skills, including reading, writing, listening, and speaking. 
            Promotes appreciation of East African culture and enhances communication within the region.</p>
@@ -183,7 +184,7 @@
    </div>
    
    
-   <button class="accordion">Physical Education</button>
+   <button class="accordion">Physical Education<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Emphasizes physical fitness, health education, and the development of motor skills through various sports and activities. 
            Encourages teamwork, discipline, and a healthy lifestyle.
@@ -193,7 +194,7 @@
    </div>
    
    
-   <button class="accordion">Entrepreneurship</button>
+   <button class="accordion">Entrepreneurship<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Introduces principles of business creation, management, and innovation. 
            Covers topics like business planning, marketing, financial literacy, and ethical business practices.</p>
@@ -207,7 +208,7 @@
    </div>
    
    
-   <button class="accordion">Literature in English</button>
+   <button class="accordion">Literature in English<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Involves the study of prose, poetry, and drama from various cultures and time periods. 
            Enhances analytical skills, critical thinking, and appreciation for literary artistry.</p>
@@ -232,7 +233,7 @@
    <!--Elective Subjects-->
    <b><h4 class="heading">Elective Subjects:</p></h4>
    <div class="section-panel">
-   <button class="accordion">Agriculture</button>
+   <button class="accordion">Agriculture<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Covers principles of farming, soil management, livestock care, and agribusiness. 
            Encourages sustainable agricultural practices and food security awareness.</p>
@@ -246,7 +247,7 @@
    </div>
    
    
-   <button class="accordion">Information and Communication Technology (ICT)</button>
+   <button class="accordion">Information and Communication Technology (ICT)<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Focuses on computer applications, programming basics, networking, and digital literacy. 
            Prepares students for technology-driven careers.</p>
@@ -260,7 +261,7 @@
    </div>
    
    
-   <button class="accordion">French</button>
+   <button class="accordion">French<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>French is one of the most widely spoken languages in the world. This subject focuses on developing listening, speaking, reading, and writing skills. 
            Students learn French grammar, vocabulary, pronunciation, and culture, preparing them for international communication and career opportunities in diplomacy, business, and tourism.</p>
@@ -274,7 +275,7 @@
    </div>
    
    
-   <button class="accordion">German</button>
+   <button class="accordion">German<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>German is a key language in Europe and is essential in industries such as engineering, science, and international trade. This subject helps students develop fluency through structured lessons in grammar, vocabulary, pronunciation, and cultural studies. 
            Emphasis is placed on practical communication skills, including conversation and writing.</p>
@@ -289,7 +290,7 @@
    </div>
    
    
-   <button class="accordion">Art and Design</button>
+   <button class="accordion">Art and Design<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>This subject nurtures students' creativity by introducing various art forms such as drawing, painting, sculpture, and graphic design. 
            It also includes elements of fashion, interior design, and craft-making. 
@@ -304,7 +305,7 @@
    </div>
    
    
-   <button class="accordion">Performing Arts (Music, Dance, and Drama)</button>
+   <button class="accordion">Performing Arts (Music, Dance, and Drama)<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Covers musical theory, dance techniques, acting, and stage performance. Enhances creativity, confidence, and artistic skills.</p>
    
@@ -316,7 +317,7 @@
             </p>
    </div>
    
-   <button class="accordion">Technology and Design</button>
+   <button class="accordion">Technology and Design<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Introduces technical drawing, mechanical and architectural design, and engineering concepts. 
            Encourages innovation and problem-solving.</p>
@@ -329,7 +330,7 @@
             </p>
    </div>
    
-   <button class="accordion">Nutrition and Food Technology</button>
+   <button class="accordion">Nutrition and Food Technology<i class="fa-solid fa-plus"></i></button>
    <div class="panel">
        <p><b>Description:</b>Focuses on food preparation, diet planning, and healthy eating habits. 
            Encourages practical cooking and food safety skills.</p>
@@ -341,6 +342,32 @@
             </ul>
    </div>
    </div>
+
+
+   <!--Dynamic Table-->
+   <form>
+    <div class="input-row">
+        <label for="subject">Subject</label><br>
+        <input type="text" id="subject" name="subject"><br><br>
+
+        <label for="teacher">Teacher</label><br>
+        <input type="text" id="teacher" name="teacher"><br><br>
+
+        <button>Submit</button><br><br>
+</form>        
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Subject</th>
+                    <th>Teacher</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+
+    </div>
    
    
        <!--Footer-->
@@ -377,5 +404,7 @@
            </div>
      
        </footer>
+
+       <script src="scripts.js"></script>
    </body>
    </html>
