--- a/Academics.html
+++ b/Academics.html
@@ -275,5 +275,6 @@ with these and may select additional elective subjects based on their interests 
         </div>
   
     </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
